output values are calculated from trimmed data